fixed path for img-1.png

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       background: #f2f2f2;
     }
     body.with_background {
-      background: url("img-1.png");
+      background: url("assets/img-1.png");
     }
     @media (max-width: 800px) {
       body.with_background {
-        background: url("img-1.png");
+        background: url("assets/img-1.png");
       }
     }
     .text-primary {
